--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: LiberationSans;
+    font-family: LiberationSans, sans-serif;
     color: white;
 }
 
@@ -16,10 +16,8 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: baseline;
-    margin: 0;
-    padding: 20px;
-    padding-bottom: 0;
-    margin-top: 15px;
+    padding: 20px 20px 0;
+    margin: 15px 0 0;
 }
 
 header h1{
@@ -38,9 +36,8 @@ header p{
     flex-direction: row;
     justify-content: left;
     align-items: baseline;
-    margin: 0;
     padding: 0;
-    margin-top: 10px;
+    margin: 10px 0 0;
 }
 
 .pageLinkHolder a{
@@ -82,7 +79,6 @@ select{
     margin: 4px 8px;
     flex-grow: 0;
     color: #FF7719;
-    padding: 6px;
     text-align: left;
 }
 
@@ -123,35 +119,23 @@ label{
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    padding: 0;
     background-color: #292929;
     border-radius: 6px;
     margin-top: 8px;
     margin-bottom: 8px;
     flex-wrap: nowrap;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px 8px;
 }
 
 .contentBoxL2{
-    width: 90%;
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin: 0;
-    padding: 0;
     background-color: #292929;
     border-radius: 6px;
-    margin-top: 6px;
-    margin-bottom: 6px;
-    margin-left: 2.5%;
+    margin: 6px 2.5%;
     flex-wrap: wrap;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px 8px;
 }
 
 #types{
@@ -195,16 +179,10 @@ p{
 
 canvas{
     background-color:transparent;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 4px 8px;
     border-radius: 6px;
     width: 100%;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin: 6px 0;
 }
 
 #costPieChart{
@@ -225,14 +203,17 @@ canvas{
     margin: 0;
     padding: 4px;
     display: none;
-    flex-wrap: wrap;
     font-size: 12px;
-    justify-content: space-between;
 }
 
-.accordionHolder p{
+.accordionHolder div{
+    width: 100%;
     margin: 0;
-    padding: 6px 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 .content{
@@ -289,7 +270,6 @@ button{
     .productImage{
         width: 80%;
         height: auto;
-        margin: 0;
-        margin-left: 10%;
+        margin: 0 0 0 10%;
     }
 }
